Templates/service-MyApp.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
# creates a new Service object named "my-service", 
# which targets TCP port 9376 on any Pod with the app=MyApp label.
