Templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.com
    http:
      paths:
#      - path: /testpath
#        pathType: Prefix
        backend:
           serviceName: myapp-internal-service
           servicePort: 8080
#          service:
#            name: test
#            port:
#              number: 80
